--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@splidejs/react-splide": "^0.7.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.5",
     "react-scroll": "^1.8.9"
   },
   "devDependencies": {
